--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Québecup 2025 • October 04 - October 04 • Montréal, QC • 169 attendees"
+      content="The Largest Upcoming Melee Events | Next major: FAST FALL$ 2025 • November 08 - November 09 • Niagara Falls, NY • 83 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -26,142 +26,6 @@
     <div class="card-container">
 <div
   class="card"
-  data-start-time="1759590000"
-  data-end-time="1759633200"
->
-  <img
-    src="assets/cards/quBecup2025.webp"
-    alt="Québecup 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Québecup 2025</h2>
-    <h4>October 04 - October 04</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Hungrybox</li>
-        <li>Faust</li>
-        <li>Lunar Dusk</li>
-        <li>Zain</li>
-        <li>Zamu</li>
-        <li>MOF</li>
-        <li>Kalvar</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=5000%20R.%20Sherbrooke%20E%2C%20Montr%C3%A9al%2C%20QC%20H1V%201A1%2C%20Canada"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Montréal, QC"
-      >
-        Montréal, QC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 169
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/qu-becup-2025/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Québecup 2025"
-        >Bracket</a
-      >
-      <a
-        href="https://imgur.com/eWLXO3x"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Québecup 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Québecup 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1760187600"
-  data-end-time="1760241540"
->
-  <img
-    src="assets/cards/killRoyVolume9.webp"
-    alt="Kill Roy: Volume 9 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Kill Roy: Volume 9</h2>
-    <h4>October 11 - October 11</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Drephen</li>
-        <li>Medz</li>
-        <li>Blue</li>
-        <li>Schlag</li>
-        <li>Grab</li>
-        <li>Syrox</li>
-        <li>coffee</li>
-        <li>Holiday</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=150%20N%20Rose%20Ave%2C%20Bloomington%2C%20IN%2047406%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Bloomington, IN"
-      >
-        Bloomington, IN </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 72
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/kill-roy-volume-9/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Kill Roy: Volume 9"
-        >Bracket</a
-      >
-      <a
-        href="https://www.start.gg/tournament/kill-roy-volume-9/details"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Kill Roy: Volume 9"
-        >Schedule</a
-      >
-      <a
-        href="https://www.twitch.tv/btssmash"
-        target="_blank"
-        class="card-button"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Kill Roy: Volume 9"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
   data-start-time="1762617600"
   data-end-time="1762750740"
 >
@@ -176,14 +40,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>moky</li>
-        <li>Aklo</li>
-        <li>Junebug</li>
         <li>Zain</li>
-        <li>Wizzrobe</li>
-        <li>Magi</li>
-        <li>MOF</li>
+        <li>Trif</li>
+        <li>Ginger</li>
+        <li>Ben</li>
+        <li>Aklo</li>
+        <li>Joshman</li>
+        <li>SDJ</li>
+        <li>Panda</li>
       </ul>
     </div>
     <hr />
@@ -196,7 +60,7 @@
         data-umami-event-location="Niagara Falls, NY"
       >
         Niagara Falls, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 50
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 83
     </p>
     <hr />
     <div class="buttons">
@@ -230,50 +94,50 @@
 
 <div
   class="card"
-  data-start-time="1760108400"
-  data-end-time="1760327880"
+  data-start-time="1771005600"
+  data-end-time="1771221600"
 >
   <img
-    src="assets/cards/luminosityMakesMovesMiami20251.webp"
-    alt="Luminosity Makes Moves Miami 2025 banner image"
+    src="assets/cards/genesisX3.webp"
+    alt="Genesis X3 banner image"
     class="image"
   />
   <div class="card-content">
-    <h2>Luminosity Makes Moves Miami 2025</h2>
-    <h4>October 10 - October 12</h4>
+    <h2>Genesis X3</h2>
+    <h4>February 13 - February 15</h4>
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Jmook</li>
+        <li>Axe</li>
+        <li>Gahtzu</li>
+        <li>Chango</li>
+        <li>Salt</li>
+        <li>Fiction</li>
+        <li>mvlvchi</li>
+        <li>Squid</li>
       </ul>
     </div>
     <hr />
     <p>
       <a
         class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=16701%20Collins%20Ave%2C%20Sunny%20Isles%20Beach%2C%20FL%2033160%2C%20USA"
+        href="https://www.google.com/maps/search/?api=1&query=150%20W%20San%20Carlos%20St%2C%20San%20Jose%2C%20CA%2095113%2C%20USA"
         target="_blank"
         data-umami-event="map-link-clicked"
-        data-umami-event-location="Sunny Isles Beach, FL"
+        data-umami-event-location="San Jose, CA"
       >
-        Sunny Isles Beach, FL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+        San Jose, CA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 340
     </p>
     <hr />
     <div class="buttons">
       <a
-        href="https://www.start.gg/tournament/luminosity-makes-moves-miami-2025-1/event/melee-singles"
+        href="https://www.start.gg/tournament/genesis-x3/event/melee-singles"
         target="_blank"
         class="card-button"
         data-umami-event="start-gg-clicked"
-        data-umami-event-name="Luminosity Makes Moves Miami 2025"
+        data-umami-event-name="Genesis X3"
         >Bracket</a
       >
       <a
@@ -281,7 +145,7 @@
         target="_blank"
         class="card-button hidden"
         data-umami-event="schedule-clicked"
-        data-umami-event-name="Luminosity Makes Moves Miami 2025"
+        data-umami-event-name="Genesis X3"
         >Schedule</a
       >
       <a
@@ -289,7 +153,7 @@
         target="_blank"
         class="card-button hidden"
         data-umami-event="stream-clicked"
-        data-umami-event-name="Luminosity Makes Moves Miami 2025"
+        data-umami-event-name="Genesis X3"
         >Stream</a
       >
     </div>
