remove fast fall$

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: FAST FALL$ 2025 • November 08 - November 09 • Niagara Falls, NY • 83 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 367 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -24,74 +24,6 @@
     <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
     <div class="card-container">
-<div
-  class="card"
-  data-start-time="1762617600"
-  data-end-time="1762750740"
->
-  <img
-    src="assets/cards/fastFall2025.webp"
-    alt="FAST FALL$ 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>FAST FALL$ 2025</h2>
-    <h4>November 08 - November 09</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Zain</li>
-        <li>Trif</li>
-        <li>Ginger</li>
-        <li>Ben</li>
-        <li>Aklo</li>
-        <li>Joshman</li>
-        <li>SDJ</li>
-        <li>Panda</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=310%204th%20St%2C%20Niagara%20Falls%2C%20NY%2014303%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Niagara Falls, NY"
-      >
-        Niagara Falls, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 83
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/fast-fall-2025/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="FAST FALL$ 2025"
-        >Bracket</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="FAST FALL$ 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="FAST FALL$ 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
 <div
   class="card"
   data-start-time="1771005600"
@@ -128,7 +60,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 340
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 367
     </p>
     <hr />
     <div class="buttons">
