--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Nounsvitational 2025 Tokyo • December 05 - December 07 • Tokyo, Japan • 16 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 619 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -26,74 +26,6 @@
     <div class="card-container">
 <div
   class="card"
-  data-start-time="1764993600"
-  data-end-time="1765116000"
->
-  <img
-    src="assets/cards/nounsvitational2025Tokyo.webp"
-    alt="Nounsvitational 2025 Tokyo banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Nounsvitational 2025 Tokyo</h2>
-    <h4>December 05 - December 07</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>aMSa</li>
-        <li>Aklo</li>
-        <li>Zain</li>
-        <li>moky</li>
-        <li>Hungrybox</li>
-        <li>lloD</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/place/Tokyo,+Japan"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Tokyo, Japan"
-      >
-        Tokyo, Japan </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 16
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/nounsvitational-2025-tokyo/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Nounsvitational 2025 Tokyo"
-        >Bracket</a
-      >
-      <a
-        href="https://images.start.gg/images/profileWidgetPageLayout/4023839/image-d54ccf6a6e9695e41da330fcb94a3ad6.png"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Nounsvitational 2025 Tokyo"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Nounsvitational 2025 Tokyo"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
   data-start-time="1771005600"
   data-end-time="1771221600"
 >
@@ -108,14 +40,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Jmook</li>
+        <li>Cody Schwab</li>
+        <li>moky</li>
+        <li>Aklo</li>
         <li>Axe</li>
-        <li>Bbatts</li>
-        <li>Gahtzu</li>
+        <li>Jmook</li>
+        <li>Hungrybox</li>
         <li>Salt</li>
-        <li>Fiction</li>
-        <li>CPU0</li>
-        <li>mvlvchi</li>
+        <li>Ginger</li>
       </ul>
     </div>
     <hr />
@@ -128,7 +60,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 402
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 619
     </p>
     <hr />
     <div class="buttons">
@@ -154,6 +86,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Genesis X3"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1785506400"
+  data-end-time="1785729300"
+>
+  <img
+    src="assets/cards/getOnMyLevel2026CanadianFightingGameChampionships.webp"
+    alt="Get On My Level 2026 - Canadian Fighting Game Championships banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Get On My Level 2026 - Canadian Fighting Game Championships</h2>
+    <h4>July 31 - August 02</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=5875%20Airport%20Rd%2C%20Mississauga%2C%20ON%20L4V%201N1%2C%20Canada"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Mississauga, ON"
+      >
+        Mississauga, ON </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/get-on-my-level-2026-canadian-fighting-game-championships/event/super-smash-bros-melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Get On My Level 2026 - Canadian Fighting Game Championships"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Get On My Level 2026 - Canadian Fighting Game Championships"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Get On My Level 2026 - Canadian Fighting Game Championships"
         >Stream</a
       >
     </div>
