feat: add pat's house and smash camp

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 619 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 977 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -41,13 +41,13 @@
       <u>Featured Players</u>
       <ul class="featured-players-columns">
         <li>Cody Schwab</li>
-        <li>moky</li>
-        <li>Aklo</li>
-        <li>Axe</li>
         <li>Jmook</li>
         <li>Hungrybox</li>
-        <li>Salt</li>
-        <li>Ginger</li>
+        <li>Aklo</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Wizzrobe</li>
+        <li>KoDoRiN</li>
       </ul>
     </div>
     <hr />
@@ -60,7 +60,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 619
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 977
     </p>
     <hr />
     <div class="buttons">
@@ -86,6 +86,142 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Genesis X3"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1777748400"
+  data-end-time="1777867200"
+>
+  <img
+    src="assets/cards/patSHouse5.webp"
+    alt="Pat's House 5 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Pat's House 5</h2>
+    <h4>May 02 - May 03</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Zain</li>
+        <li>moky</li>
+        <li>KoDoRiN</li>
+        <li>Axe</li>
+        <li>Jmook</li>
+        <li>Hungrybox</li>
+        <li>Joshman</li>
+        <li>Spark</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=Price%20Center%2C%20La%20Jolla%2C%20CA%2092093%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="San Diego, CA"
+      >
+        San Diego, CA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 138
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/pat-s-house-5/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Pat's House 5"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Pat's House 5"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Pat's House 5"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1780030800"
+  data-end-time="1780333200"
+>
+  <img
+    src="assets/cards/smashCampHeartlands.webp"
+    alt="Smash Camp: Heartlands banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Smash Camp: Heartlands</h2>
+    <h4>May 29 - June 01</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Salt</li>
+        <li>Ben</li>
+        <li>Lowercase hero</li>
+        <li>TBD</li>
+        <li>Ginger</li>
+        <li>Preeminent</li>
+        <li>Slowking</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=N1875%2021st%20Ave%2C%20Wautoma%2C%20WI%2054982%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Wautoma, WI"
+      >
+        Wautoma, WI </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/smash-camp-heartlands/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Smash Camp: Heartlands"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Smash Camp: Heartlands"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Smash Camp: Heartlands"
         >Stream</a
       >
     </div>
