feat: add entrants for smash camp heartlands

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 977 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 980 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -60,7 +60,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 977
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 980
     </p>
     <hr />
     <div class="buttons">
@@ -128,7 +128,7 @@
         data-umami-event-location="San Diego, CA"
       >
         San Diego, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 138
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 140
     </p>
     <hr />
     <div class="buttons">
@@ -176,14 +176,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
+        <li>Joshman</li>
+        <li>Khryke</li>
+        <li>Preeminent</li>
+        <li>Kacey</li>
         <li>Salt</li>
         <li>Ben</li>
-        <li>Lowercase hero</li>
-        <li>TBD</li>
-        <li>Ginger</li>
-        <li>Preeminent</li>
         <li>Slowking</li>
-        <li>TBD</li>
+        <li>Lowercase hero</li>
       </ul>
     </div>
     <hr />
