feat: add out of the blue 5 and battle of bc 8

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 980 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Genesis X3 • February 13 - February 15 • San Jose, CA • 981 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -60,7 +60,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 980
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 981
     </p>
     <hr />
     <div class="buttons">
@@ -86,6 +86,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Genesis X3"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1774710000"
+  data-end-time="1774753200"
+>
+  <img
+    src="assets/cards/outOfTheBlue5.webp"
+    alt="Out of the Blue 5 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Out of the Blue 5</h2>
+    <h4>March 28 - March 28</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Jmook</li>
+        <li>Zamu</li>
+        <li>Ben</li>
+        <li>Ossify</li>
+        <li>Joshman</li>
+        <li>Ginger</li>
+        <li>Krudo</li>
+        <li>Preeminent</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=3205%20W%20Foster%20Ave%2C%20Chicago%2C%20IL%2060612%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Chicago, IL"
+      >
+        Chicago, IL </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 109
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/out-of-the-blue-5/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Out of the Blue 5"
+        >Bracket</a
+      >
+      <a
+        href="https://images.start.gg/images/profileWidgetPageLayout/3881822/image-ca7824f0216aced14dd90f7bf44763c4.png"
+        target="_blank"
+        class="card-button"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Out of the Blue 5"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Out of the Blue 5"
         >Stream</a
       >
     </div>
@@ -128,7 +196,7 @@
         data-umami-event-location="San Diego, CA"
       >
         San Diego, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 140
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 141
     </p>
     <hr />
     <div class="buttons">
@@ -222,6 +290,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Smash Camp: Heartlands"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1780678800"
+  data-end-time="1780894800"
+>
+  <img
+    src="assets/cards/battleOfBc87.webp"
+    alt="Battle of BC 8 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Battle of BC 8</h2>
+    <h4>June 05 - June 07</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=Canada%20Place%2C%20999%20Canada%20Pl%2C%20Vancouver%2C%20BC%20V6C%203E1%2C%20Canada"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Vancouver, BC"
+      >
+        Vancouver, BC </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/battle-of-bc-8-7/event/super-smash-bros-melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Battle of BC 8"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Battle of BC 8"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Battle of BC 8"
         >Stream</a
       >
     </div>
