feat: add sapf2, ceo, altitude sickness
remove genesis x3

--- a/site/index.html
+++ b/site/index.html
@@ -108,14 +108,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Jmook</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Wizzrobe</li>
         <li>Zamu</li>
-        <li>Ben</li>
-        <li>Ossify</li>
+        <li>Jmook</li>
+        <li>Hungrybox</li>
         <li>Joshman</li>
-        <li>Ginger</li>
-        <li>Krudo</li>
-        <li>Preeminent</li>
+        <li>Chem</li>
       </ul>
     </div>
     <hr />
@@ -128,7 +128,7 @@
         data-umami-event-location="Chicago, IL"
       >
         Chicago, IL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 109
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 256
     </p>
     <hr />
     <div class="buttons">
@@ -154,6 +154,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Out of the Blue 5"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1775826000"
+  data-end-time="1776024000"
+>
+  <img
+    src="assets/cards/sapf2.webp"
+    alt="SAPF 2 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>SAPF 2</h2>
+    <h4>April 10 - April 12</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Trif</li>
+        <li>Free Palestine</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>Frenzy</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=Anne-Stache-Allee%207%2C%2030459%20Hannover%2C%20Deutschland"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Hannover, NDS"
+      >
+        Hannover, NDS </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 249
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/sapf-2/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="SAPF 2"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="SAPF 2"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="SAPF 2"
         >Stream</a
       >
     </div>
@@ -196,7 +264,7 @@
         data-umami-event-location="San Diego, CA"
       >
         San Diego, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 141
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 176
     </p>
     <hr />
     <div class="buttons">
@@ -222,6 +290,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Pat's House 5"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1778338800"
+  data-end-time="1778392740"
+>
+  <img
+    src="assets/cards/altitudeSickness3.webp"
+    alt="Altitude Sickness 3 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Altitude Sickness 3</h2>
+    <h4>May 09 - May 09</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>KoDoRiN</li>
+        <li>Joshman</li>
+        <li>Krudo</li>
+        <li>Dawson</li>
+        <li>Salt</li>
+        <li>Zamu</li>
+        <li>Preeminent</li>
+        <li>Stiv</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=University%20Memorial%20Center%2C%20Boulder%2C%20CO%2080302%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Boulder, CO"
+      >
+        Boulder, CO </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 120
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/altitude-sickness-3/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Altitude Sickness 3"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Altitude Sickness 3"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Altitude Sickness 3"
         >Stream</a
       >
     </div>
@@ -426,6 +562,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Get On My Level 2026 - Canadian Fighting Game Championships"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1786716000"
+  data-end-time="1786932000"
+>
+  <img
+    src="assets/cards/ceo2026.webp"
+    alt="CEO 2026 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>CEO 2026</h2>
+    <h4>August 14 - August 16</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=9939%20Universal%20Blvd%2C%20Orlando%2C%20FL%2032819%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Orlando, FL"
+      >
+        Orlando, FL </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/ceo-2026/event/super-smash-bros-melee"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="CEO 2026"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="CEO 2026"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="CEO 2026"
         >Stream</a
       >
     </div>
